--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "pinia": "^2.0.16",
     "vue": "^2.7.7",
-    "vue-router": "^3.5.4"
+    "vue-router": "^3.5.4",
+    "axios": "^1.7.2"
   },
   "devDependencies": {
     "@vitejs/plugin-legacy": "^2.0.0",
